--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ input:focus {
   color: var(--iris);
 }
 
-.nav {
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
