--- a/css/styles.css
+++ b/css/styles.css
@@ -349,21 +349,20 @@ nav {
 
 .team-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
+  gap: 24px;
 }
 
 .team-item {
+  max-width: calc((100% - 72px) / 4);
+  width: 100%;
   background-color: var(--white);
   border-radius: 0 0 4px 4px;
   box-shadow:
     0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16),
     0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
-
-.team-item:not(:last-child) {
-  margin-right: 24px;
 }
 
 .team-item-content {
