--- a/css/styles.css
+++ b/css/styles.css
@@ -260,7 +260,7 @@ nav {
   height: 4px;
   width: 100%;
   border-radius: 10px;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   transform: scaleX(0);
   transition: all 0.4s ease-in-out;
